--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,43 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body{
+    background-color: black;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+   align-items: end;
+    background-color: #ffc107;
+    padding: 10px;
+    height: 100px;
+}
+.button{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 10px ;
+  
+}
+
+
+.box{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+.container{
+    
+    padding: 10px;
+    background-color: #ffc107;
+    width: 30rem;
+    height: 40rem;
+
+}
+.scuad{
+    background-color: black;
+    height: 10rem;
+    width: 10rem;
+    
+    
+}
